--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 	<title>SOS Vial</title>
 </head>
 <body>
+	<section class="container">
+		<section class="row">
+			<section class="col s8 offset-s2">
+				<h1>Prueba</h1>
+			</section>
+		</section>
+	</section>
+
 	<script src="node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
-	<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+	<script src="../js/index.js" charset="utf-8"></script>
 </body>
 </html>
