--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="node_modules\materialize-css\dist\css\materialize.min.css">
+	<link rel="stylesheet" href="../css/main.css">
 	<title>SOS Vial</title>
 </head>
-<body>
+<body class="fondo">
 	<section class="container">
 		<section class="row">
 			<section class="col s10 offset-s1">
-				<h1>Prueba</h1>
+				<img class="logo center" src="../assets/img/logo.png" alt="">
 			</section>
 		</section>
 	</section>
-    
+
 	<script src="node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
 	<script src="js/materialize.min.js"></script>
 	<script src="../js/index.js" charset="utf-8"></script>
