mostrando mapa en version de localhost

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
 			</section>
 		</section>
 	</section>
-
+    
 	<script src="node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
+	<script src="js/materialize.min.js"></script>
 	<script src="../js/index.js" charset="utf-8"></script>
 </body>
 </html>
